--- a/src/app/editar-produto/editar-produto.component.html
+++ b/src/app/editar-produto/editar-produto.component.html
@@ -1,4 +1,4 @@
-<app-menu [pageTitle]="'Cadastrar Produto'">
+<app-menu [pageTitle]="'Editar Produto'">
     <form (submit)="salvarProduto()">
         <div class="row col-sm-6">
             <div class="col-sm-12">
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="col-sm-12 mt-4">
-            <button type="submit" class="btn btn-primary btn-style">Cadastrar Produto</button>
+            <button type="submit" class="btn btn-primary btn-style">Salvar Produto</button>
         </div>
     </form>
 </app-menu>
