--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,48 +1,154 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
-}
-/* Estilo do menu quando o mouse passa por cima */
-.menu:hover {
-    /* background: linear-gradient(45deg, #d70303, #aa0309) !important; Altera o gradiente de fundo */
-    transition: background 0.3s ease !important; /* Adiciona uma transição suave */
-}
 
-.menu .navbar-brand:hover {
-    color: #530205 !important; /* Altera a cor do texto do logotipo ao passar o mouse */
-    transition: color 0.3s ease !important; /* Adiciona uma transição suave */
-}
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
-.menu .nav-link:hover {
-    color: #faf0f0 !important; /* Altera a cor do texto dos links ao passar o mouse */
-    font-size: 1em;
-    font-weight: bold;
-    transition: color 0.3s ease !important; /* Adiciona uma transição suave */
-}
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
 
 .titulo_pagina {
-    font-size: 1.5em;
-    color: #8B4513; 
-    margin-bottom: 1.8em;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Adicionei sombra de texto */
+    font-family: 'Playfair Display', serif;
+    font-size: 1.8em;
+    color: #0b0b0b; 
+    margin-bottom: 1.5em;
+    border-bottom: 1px dashed #0b0b0b;
     padding: 10px;
-    border-bottom: 2px solid #FFA500; /* Cor laranja */
     position: relative;
 }
 
-/* Pseudo-elemento ::before para adicionar um efeito */
-.titulo_pagina::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 3px; /* Altura da linha estilosa */
-    background: linear-gradient(90deg, transparent, #FFA500, transparent); /* Gradiente laranja */
-    bottom: -2px; /* Posicionamento acima da borda sólida */
-    left: 0;
-    transition: all 0.3s; /* Efeito de transição suave */
+.titulo_pet {
+    text-align: right; 
+  }
+
+
+.fa-2x {
+font-size: 2em;
+}
+.fa {
+position: relative;
+display: table-cell;
+width: 60px;
+height: 36px;
+text-align: center;
+vertical-align: middle;
+font-size:20px;
 }
 
-/* Efeito hover para a borda inferior estilosa */
-.titulo_pagina:hover::before {
-    height: 100%; /* Expandir a linha para cima */
-    transition: all 0.3s; /* Efeito de transição suave */
+
+.main-menu:hover,nav.main-menu.expanded {
+width:250px;
+overflow:visible;
 }
+
+.main-menu {
+background:#1a014f;
+border-right:1px solid #e5e5e5;
+position:absolute;
+top:0;
+bottom:0;
+height: 100%;
+left:0;
+width:60px;
+overflow:hidden;
+-webkit-transition:width .05s linear;
+transition:width .05s linear;
+-webkit-transform:translateZ(0) scale(1,1);
+z-index:1000;
+}
+
+.main-menu>ul {
+margin:7px 0;
+}
+
+.main-menu li {
+position:relative;
+display:block;
+width:250px;
+}
+
+.main-menu li>a {
+position:relative;
+display:table;
+border-collapse:collapse;
+border-spacing:0;
+color:#999;
+ font-family: arial;
+font-size: 14px;
+text-decoration:none;
+-webkit-transform:translateZ(0) scale(1,1);
+-webkit-transition:all .1s linear;
+transition:all .1s linear;
+  
+}
+
+.main-menu .nav-icon {
+position:relative;
+display:table-cell;
+width:60px;
+height:36px;
+text-align:center;
+vertical-align:middle;
+font-size:18px;
+}
+
+.main-menu .nav-text {
+position:relative;
+display:table-cell;
+vertical-align:middle;
+width:190px;
+  font-family: 'Titillium Web', sans-serif;
+}
+
+.main-menu>ul.logout {
+position:absolute;
+left:0;
+bottom:0;
+}
+
+.no-touch .scrollable.hover {
+overflow-y:hidden;
+}
+
+.no-touch .scrollable.hover:hover {
+overflow-y:auto;
+overflow:visible;
+}
+
+a:hover,a:focus {
+text-decoration:none;
+}
+
+nav {
+-webkit-user-select:none;
+-moz-user-select:none;
+-ms-user-select:none;
+-o-user-select:none;
+user-select:none;
+}
+
+nav ul,nav li {
+outline:0;
+margin:0;
+padding:0;
+}
+.main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
+color:#fff;
+background-color:#000000;
+}
+.area {
+float: left;
+background: #e2e2e2;
+width: 100%;
+height: 100%;
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
+}
+
+.conteudo {
+    width: 100%; /* Largura total da página */
+    height: 100vh; /* Altura total da viewport do navegador */
+    overflow: auto; /* Adicionar rolagem quando necessário */
+    position: relative; /* Estabelece o contexto de posicionamento */
+}
+
