--- a/src/app/lista-usuario/lista-usuario.component.html
+++ b/src/app/lista-usuario/lista-usuario.component.html
@@ -1,25 +1,29 @@
 <app-menu [pageTitle]="'Usuários'">
+    <div class="col-sm-4 mb-3">
+        <input class="input-style" type="text" [(ngModel)]="filtroIdUsuario" (input)="aplicarFiltro()"
+            placeholder="Filtrar por Id do Usuário" />
+    </div>
     <table class="table table-bordered border-warning">
         <thead class="table-warning">
             <tr>
                 <th scope="col">Código</th>
                 <th scope="col">Nome</th>
                 <th scope="col">CPF</th>
-                <th scope="col">Perfil</th>
-                <th scope="col">Departamento</th>
+                <th scope="col">Email</th>
+                <th scope="col">Cargo</th>
                 <th scope="col">Situação</th>
                 <th scope="col">Ações</th> <!-- Coluna para as ações -->
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let usuario of usuarios">
-                <th scope="row">{{ usuario.codigo }}</th>
-                <td>{{ usuario.nome }}</td>
+                <th scope="row">{{ usuario.idUsuario }}</th>
+                <td>{{ usuario.nomeCompleto }}</td>
                 <td>{{ usuario.cpf }}</td>
-                <td>{{ usuario.perfil }}</td>
-                <td>{{ usuario.departamento }}</td>
-                <td>{{ usuario.situacao }}</td>
-                <td class="align-middle text-center"><a href="editar-usuario"><app-icon [name]="'editar'" class="icon-editar"></app-icon></a>     
+                <td>{{ usuario.email }}</td>
+                <td>{{ usuario.descricaoCargo }}</td>
+                <td>{{ usuario.status }}</td>
+                <td class="align-middle text-center" (click)="editarUsuario(usuario.idUsuario)"><app-icon [name]="'editar'" class="icon-editar" style="cursor: pointer;"></app-icon>    
                 </td>
             </tr>
         </tbody>
