--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,41 +1,86 @@
-<div class="container-fluid p-0" style="background-color: #ffa500">
-    <div>
-        <nav class="navbar navbar-expand-lg navbar-light p-1 menu"
-            style="background: linear-gradient(45deg, #FFA500, #FF6347); box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
-            <img [src]="patinha" alt="" width="30" height="30" style="margin-left: 20px;">
-            <a class="navbar-brand" href="#" style="color: #fff; font-weight: bold; padding-left: 10px;">Cheers Pet</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="menu-usuario" style="color: #fff;">Usuários</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="menu-estoque" style="color: #fff;">Produtos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="menu-venda" style="color: #fff;">Vendas</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <div>
-        <div style="background-color: #fff; min-height: 650px; padding: 5em; padding-top: 1.5em; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); border-radius: 10px;">
-            <div class="row">
-                <h1 class="titulo_pagina">{{ pageTitle }}</h1>
-            </div>
-            <div class="body">
-                <ng-content></ng-content>
-            </div>
+<body>
+    <div class="area"></div>
+    <nav class="main-menu">
+        <ul>
+            <li>
+                <i> <img [src]="patinha" alt="" width="25" height="25" style="margin-left: 20px;"></i>
+                <span class="nav-text"><br></span>
+            </li>
+
+            <li>
+                <a href="efetuar-venda">
+                    <i class="fa fa-shopping-cart fa-2x"></i>
+                    <span class="nav-text">
+                        Efetuar Venda
+                    </span>
+                </a>
+            </li>
+            <li class="has-subnav">
+                <a href="relatorio-vendas">
+                    <i class="fa fa-book"></i>
+                    <span class="nav-text">
+                        Relatório Vendas
+                    </span>
+                </a>
+
+            </li>
+            <li class="has-subnav">
+                <a href="cadastro-usuario">
+                    <i class="fa fa-user"></i>
+                    <span class="nav-text">
+                        Cadastrar Usuário
+                    </span>
+                </a>
+
+            </li>
+            <li class="has-subnav">
+                <a href="lista-usuario">
+                    <i class="fa fa-users"></i>
+                    <span class="nav-text">
+                        Lista Usuários
+                    </span>
+                </a>
+
+            </li>
+            <li>
+                <a href="cadastrar-produto">
+                    <i class="fa fa-plus-square"></i>
+                    <span class="nav-text">
+                        Cadastrar Produto
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="lista-produtos">
+                    <i class="fa fa-list"></i>
+                    <span class="nav-text">
+                       Listar Produtos
+                    </span>
+                </a>
+            </li>
+        </ul>
+
+        <ul class="logout">
+            <li>
+                <a href="#">
+                    <i class="fa fa-power-off fa-2x"></i>
+                    <span class="nav-text">
+                        Logout
+                    </span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</body>
+<div class="conteudo-fixo" >
+    <div class="conteudo"
+        style="background-color: #ffe0b5; min-height: 698px; padding: 10em; padding-top: 2.5em; ">
+        <div class="row">
+            <h2 class="titulo_pet"><img src="/assets/cheers_pet.png" alt=""></h2>
+            <h1 class="titulo_pagina">{{ pageTitle }}</h1>
+        </div>
+        <div class="body">
+            <ng-content></ng-content>
         </div>
     </div>
 </div>
-
-
-
-
-
