--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -62,7 +62,7 @@
 
         <ul class="logout">
             <li>
-                <a href="#">
+                <a href="login">
                     <i class="fa fa-power-off fa-2x"></i>
                     <span class="nav-text">
                         Logout
